# webglass-cli

./: .flake8  .gitignore  .markdownlint-cli2.yaml  AGENTS.colleague.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/agent-config/: SKILL.md
.claude/skills/agent-config/data/: backend-fingerprints.yaml
.claude/skills/agent-config/scripts/: show.sh
.claude/skills/ask-colleague/: SKILL.md
.claude/skills/ask-colleague/prompts/: explore.md  review.md  write.md
.claude/skills/ask-colleague/scripts/: ask-colleague.sh
.claude/skills/assign-to-workforce/: SKILL.md
.claude/skills/assign-to-workforce/scripts/: assign-to-workforce.sh
.claude/skills/challenge/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/cicd/scripts/: _resolve-nick.sh  portability-lint.sh  pr-reply.sh  pr-status.sh  workflow.sh
.claude/skills/communicate/: SKILL.md
.claude/skills/communicate/scripts/: fetch-issues.sh  mesh-message.sh  post-comment.sh  post-issue.sh
.claude/skills/communicate/scripts/templates/: skill-new-brief.md  skill-update-brief.md
.claude/skills/deviate/: SKILL.md
.claude/skills/doc-test-alignment/: SKILL.md
.claude/skills/doc-test-alignment/scripts/: check.sh
.claude/skills/pypi-maintainer/: SKILL.md
.claude/skills/pypi-maintainer/scripts/: switch-source.sh
.claude/skills/recall/: SKILL.md
.claude/skills/recall/scripts/: recall.sh
.claude/skills/remember/: SKILL.md
.claude/skills/remember/scripts/: remember.sh
.claude/skills/run-tests/: SKILL.md
.claude/skills/run-tests/scripts/: test.sh
.claude/skills/scope/: SKILL.md
.claude/skills/sonarclaude/: SKILL.md
.claude/skills/sonarclaude/scripts/: sonar.sh
.claude/skills/spec-to-plan/: SKILL.md
.claude/skills/spec-to-plan/scripts/: spec-to-plan.sh
.claude/skills/summarize-delivery/: SKILL.md
.claude/skills/think/: SKILL.md
.claude/skills/think/scripts/: think.sh
.claude/skills/version-bump/: SKILL.md
.claude/skills/version-bump/scripts/: bump.py
.github/workflows/: publish.yml  tests.yml
culture_agent_template/: __init__.py  __main__.py
culture_agent_template/cli/: __init__.py  _errors.py  _output.py
culture_agent_template/cli/_commands/: __init__.py  cli.py  doctor.py  explain.py  learn.py  overview.py  whoami.py
culture_agent_template/explain/: __init__.py  catalog.py
docs/: skill-sources.md
tests/: test_cli.py  test_cli_introspection.py
webglass/: __init__.py  __main__.py
webglass/cli/: __init__.py  _errors.py  _output.py
webglass/cli/_commands/: cli.py  doctor.py  explain.py  learn.py  overview.py  whoami.py
webglass/explain/: __init__.py  catalog.py
